data/apps/argocd/blender/manifest.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blender
  namespace: blender
  labels:
    app: blender
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blender
  template:
    metadata:
      labels:
        app: blender
    spec:
      containers:
        - name: blender
          image: lscr.io/linuxserver/blender:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: http
            - containerPort: 3001
              name: https
          volumeMounts:
            - name: config
              mountPath: /config
            - name: dshm
              mountPath: /dev/shm
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: blender-config
        - name: dshm
          emptyDir:
            medium: Memory
            sizeLimit: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: blender
  namespace: blender
spec:
  selector:
    app: blender
  ports:
    - port: 3000
      targetPort: 3000
      name: http
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: blender
  namespace: blender
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - "blender.xxx.local"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: blender
          port: 3000
